--- a/Livrable/Gestionnaire_de_Projets/composer.json
+++ b/Livrable/Gestionnaire_de_Projets/composer.json
@@ -16,6 +16,7 @@
         "laracasts/utilities": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "laravel/ui": "^1.0",
         "laravelcollective/html": "^6.0",
         "yajra/laravel-datatables-oracle": "^9.6"
     },
